# pLam

./: LICENSE  README.md  lambda-calculus-interpreter.cabal  make_global.sh  pLam.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
examples/: 1.4.3.plam  2.2.4.plam  2.2.5.plam  2.2.6.plam  2.5.1.plam  2.5.2.plam  2.5.3.plam  2.5.4.plam  2.5.5.plam  3.4.2.plam  3.4.3.plam  factorial.plam  fibonacci.plam  primjer_0.plam  primjer_1.plam  primjer_2.plam  primjer_3.plam  primjer_4.plam
import/: arithmetic.plam  arithmetic.txt  binary.plam  binary.txt  booleans.plam  booleans.txt  comp.plam  comp.txt  comp_examples.plam  fpc.txt  list.plam  predicates.plam  std.plam  std.txt
programs/: min.plam  min.txt  program0.plam  program0.txt
src/: Config.hs  Eval.hs  Evaluator.hs  Helper.hs  Parser.hs  Reducer.hs  Reductions.hs  Syntax.hs
