name:                lambda-calculus-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sandrolovnicki/lambda-calculus-interpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Sandro Lovnički
maintainer:          lovnicki.sandro@gmail.com
copyright:           2017 Sandro Lovnički
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser Syntax Evaluator Reductions
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
  default-language:    Haskell2010

executable lci
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-calculus-interpreter
                     , mtl
                     , containers
  default-language:    Haskell2010

test-suite lambda-calculus-interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda-calculus-interpreter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sandrolovnicki/lambda-calculus-interpreter
