name:                pLam
version:             2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sandrolovnicki/pLam#readme
license:             BSD3
license-file:        LICENSE
author:              Sandro Lovnički
maintainer:          lovnicki.sandro@gmail.com
copyright:           2019 Sandro Lovnički
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser Syntax Evaluator Reducer Helper Config
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
                     , haskeline
  default-language:    Haskell2010

executable plam
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pLam
                     , mtl
                     , containers
                     , haskeline
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sandrolovnicki/pLam
